Improved visibility of blockquotes and stopped showing empty comments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,10 @@ body {
   font-family: "Open Sans", sans-serif !important;
 }
 
+blockquote {
+  line-height: 25px;
+}
+
 .collapsing {
   background-color: white;
   border: 1px solid transparent;
